# heavy-metal-notifier

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  SECURITY.md  Taskfile.yml  build.rs  build.sh  config.json  go.mod  go.sum  main.go  metal-releases.service
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml
.github/workflows/: deploy.yml  go.yml  nightly.yml  rust.yml
cmd/: root.go  serve.go
components/: about-page.templ  about-page_templ.go  base.templ  base_templ.go  contact-page.templ  contact-page_templ.go  index.templ  index_templ.go  privacy-page.templ  privacy-page_templ.go  simple-screen.templ  simple-screen_templ.go  start-page.templ  start-page_templ.go  start-success-page.templ  start-success-page_templ.go  stop-success-page.templ  stop-success-page_templ.go  tos.templ  tos_templ.go
deploy/: .env.example  Dockerfile  compose.yaml  compose.yml  config.example.json  config.json  metal-releases.service
internal/app/: app.go  app_test.go
internal/constants/: email.go  email_test.go  general.go
internal/driver/: db.go  doc.go
internal/email/: auth.go  doc.go  email.go
internal/jobs/: calendar.go  releases.go  users.go
internal/models/: calendar.go  calendar_test.go  doc.go
internal/scraper/: doc.go  wiki.go  wiki_test.go
internal/scraper/testdata/: wiki2022.html  wiki2023.html  wiki2024.html
internal/server/: helpers.go  server.go
internal/services/: doc.go  email.go  service.go  sqlite-service.go
internal/services/migrations/: 20230330205751_init.sql
internal/services/statements/: delete.go  insert.go  select.go  update.go
internal/templates/: data-templates.go  data.go  email.go  email_test.go  templates.go
internal/utils/regex/: regex.go  regex_test.go
releases/: main.go
src/: calendar.rs  config.rs  error.rs  jobs.rs  lib.rs  main.rs
src/model/: calendar.rs  entities.rs  feed.rs  mod.rs  schema.rs
src/model/store/: mod.rs
src/model/store/migrations/2024-09-13-033742_create_calendar/: down.sql  up.sql
src/scraper/: client.rs  metallum.rs  mod.rs  wiki.rs
src/support/: email.rs  env.rs  mod.rs
src/web/: handlers_calendar.rs  handlers_general.rs  mod.rs
src/web/templates/: calendar.rs  core.rs  main.rs  mod.rs
static/: robots.txt  static.go
static/css/: tailwind.css
tests/coverage/: run.sh
views/: about.gohtml  contact.gohtml  index.gohtml  privacy.gohtml  simple-screen.gohtml  start-success.gohtml  start.gohtml  stop-success.gohtml  tos.gohtml  views.go
views/components/: about-page.templ  about-page_templ.go  base.templ  base_templ.go  contact-page.templ  contact-page_templ.go  index.templ  index_templ.go  privacy-page.templ  privacy-page_templ.go  simple-screen.templ  simple-screen_templ.go  start-page.templ  start-page_templ.go  start-success-page.templ  start-success-page_templ.go  stop-success-page.templ  stop-success-page_templ.go  tos.templ  tos_templ.go
views/emails/: contact.mjml  end-of-service.mjml  error-admin.mjml  intro.mjml  releases.mjml
views/emails/transpiled/: contact.gohtml  end-of-service.gohtml  error-admin.gohtml  intro.gohtml  releases.gohtml
views/layouts/: base.gohtml
views/tailwind/: package-lock.json  package.json  tailwind.config.js
web/app/: package-lock.json  package.json  tailwind.config.js
web/appff/: package-lock.json
web/static/: robots.txt  sitemap.xml
web/static/css/: tailwind-custom.css  tailwind.css
