[package]
name = "heavy-metal-notifier"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
axum-extra = {  version = "0.9.6", features = ["form"] }
derive_more = { version = "1.0.0", features = ["from", "display"] }
diesel = { version = "2.2.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
lettre = { version = "0.11.11", default-features = false, features = ["smtp-transport", "pool", "rustls-tls", "hostname", "builder"]  }
maud = { version = "0.26.0", features = ["axum"] }
mime_guess = "2.0.5"
reqwest = { version = "0.12.11", features = ["rustls-tls"], default-features = false }
rss = "2.0.11"
rust-embed = { version = "8.5.0", features = ["axum-ex"] }
scraper = "0.22.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
time = { version = "0.3.37", features = ["formatting", "local-offset"]}
tokio = { version = "1.42.0", features = ["rt-multi-thread", "signal"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url-escape = "0.1.1"

[dev-dependencies]
env-lock = "0.1.2"
pretty_assertions = "1.4.1"

[workspace.metadata.cross.target.x86_64-unknown-linux-musl]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libsqlite3-dev:$CROSS_DEB_ARCH"
]

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libsqlite3-dev:$CROSS_DEB_ARCH"
]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libsqlite3-dev:$CROSS_DEB_ARCH"
]

[workspace.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libsqlite3-dev:$CROSS_DEB_ARCH"
]
